// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionTextWithInfoComponent should not show control link and question details for TEXT questions 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  __ngContext__={[Function Number]}
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
  shouldShowDownloadQuestionResult="false"
>
  <span
    class="d-inline-flex align-items-center"
  >
    <h2
      class="col-auto question-number"
    >
       Question 0:  
    </h2>
    <span
      class="col-auto"
      id="question-text"
    >
       Text question details
    </span>
  </span>
</tm-question-text-with-info>
`;

exports[`QuestionTextWithInfoComponent should show control link when question type is not TEXT 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  __ngContext__={[Function Number]}
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
  shouldShowDownloadQuestionResult="false"
>
  <span
    class="d-inline-flex align-items-center"
  >
    <h2
      class="col-auto question-number"
    >
       Question 0:  
    </h2>
    <span
      class="col-auto"
      id="question-text"
    >
       MCQ question details
    </span>
    <button
      class="info-font-size ms-1 border-0 bg-transparent text-primary"
      id="additional-info-button"
    >
       [more] 
    </button>
  </span>
</tm-question-text-with-info>
`;

exports[`QuestionTextWithInfoComponent should show question detail when click control link 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  __ngContext__={[Function Number]}
  additionalInfoIsExpanded={[Function Boolean]}
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
  shouldShowDownloadQuestionResult="false"
>
  <span
    class="d-inline-flex align-items-center"
  >
    <h2
      class="col-auto question-number"
    >
       Question 0:  
    </h2>
    <span
      class="col-auto"
      id="question-text"
    >
       MCQ question details
    </span>
    <button
      class="info-font-size ms-1 border-0 bg-transparent text-primary"
      id="additional-info-button"
    >
       [less] 
    </button>
  </span><div
    class="info-font-size"
    id="additional-info"
  >
    <tm-mcq-question-additional-info>
      Multiple-choice (single answer) question options:
      <ul>
        <li>
          a
        </li>
        <li>
          b
        </li>
      </ul>
    </tm-mcq-question-additional-info>
  </div>
</tm-question-text-with-info>
`;
